--- a/ReporterUI/reporter_app/templates/layout.template
+++ b/ReporterUI/reporter_app/templates/layout.template
@@ -12,7 +12,7 @@
     <!-- jQuery Version 2.2.4 -->
     <script src="{{ url_for('static', filename='js/jquery-1.12.4.min.js') }}"></script>
     <!-- Vue  2.2.4 -->
-    <script src="{{ url_for('static', filename='js/vue.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vue' + ('.min' if not debug else '') + '.js') }}"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
